2010-07-01  Andreas Kling  <andreas.kling@nokia.com>

Reviewed by Tor Arne Vestbø.

        [Qt] Clamp color stops passed to QGradient to 1.0
        [https://bugs.webkit.org/show_bug.cgi?id=41484

        Fixes an issue where color stops would be silently dropped from radial gradients.

        * platform/graphics/qt/GradientQt.cpp:
        (WebCore::Gradient::platformGradient):

Canonical link: https://commits.webkit.org/53271@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62353 268f45cc-cd09-0410-ab3c-d52691b4dbfc